--- a/css/home.css
+++ b/css/home.css
@@ -85,29 +85,53 @@ body {
   margin-top: 0.8rem; /* 60/75 */
   margin-bottom: 0.8rem;
 }
-.footer button {
-  display: block;
+.footer .btnsure {
+  /* display: block; */
   margin: 0 auto;
   margin-top: 1.466667rem /* 110/75 */;
   height: 1.266667rem /* 95/75 */;
   width: 90%;
+  text-align: center;
+  line-height: 1.266667rem;
   margin-bottom: 1.466667rem; /* 110/75 */
   border-radius: 0.233333rem; /* 10/75 */
   background-color: #2b90ec;
   font-size: 0.48rem /* 36/75 */;
   color: #ffffff;
 }
+.motaik1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ccc;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
 .title {
   position: fixed;
-  width: 50% /* 300/54 */;
-  height: 3.703704rem /* 200/54 */;
+  width: 70% /* 300/54 */;
+  height: 4.703704rem /* 200/54 */;
   background-color: #fff;
   top: 3.703704rem; /* 200/54 */
-  left: 25%;
+  left: 15%;
   text-align: center;
-  line-height: 3.703704rem /* 200/54 */;
-  display: none;
-  font-size: 0.592593rem; /* 32/54 */
-  color: #0480ae;
-  border: 1px solid #000;
+  font-size: 0.592593rem /* 32/54 */;
+  /* border: 1px solid #797979; */
+  padding-top: 1.351852rem /* 100/54 */;
+  box-sizing: border-box;
+  color: #333333;
+  border-radius: 0.277778rem; /* 15/54 */
+}
+
+.btnCanel1 {
+  margin: 0.685185rem /* 10/54 */ auto;
+  display: block;
+  font-size: 0.4333rem;
+  width: 1.966667rem /* 90/54 */;
+  height: 0.855556rem /* 30/54 */;
+  border-radius: 0.092593rem; /* 5/54 */
+  border: none;
+  background-color: #169bd5;
+  color: #fff;
 }
