--- a/css/signature.css
+++ b/css/signature.css
@@ -62,6 +62,7 @@ body {
 .button1,
 .button2,
 .button3 {
+  outline: none;
   width: 88%;
   height: 60px;
   font-size: 0.62963rem /* 34/54 */;
@@ -69,6 +70,10 @@ body {
   border: none;
   border-radius: 0.277778rem; /* 15/54 */
   margin-bottom: 0.425926rem; /* 23/54 */
+  text-align: center;
+  line-height: 60px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 .button1 {
   background-color: #2b90ec;
@@ -88,26 +93,37 @@ body {
   padding-left: 0.666667rem /* 36/54 */;
   box-sizing: border-box;
 }
+.motaik {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ccc;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
 .title2 {
   position: fixed;
-  width: 50% /* 300/54 */;
+  width: 70% /* 300/54 */;
   height: 3.703704rem /* 200/54 */;
   background-color: #fff;
   top: 3.703704rem; /* 200/54 */
-  left: 25%;
+  left: 15%;
   text-align: center;
-  display: none;
-  font-size: 0.444444rem /* 24/54 */;
-  border: 1px solid #000;
-  padding-top: 1.851852rem /* 100/54 */;
+  font-size: 0.592593rem /* 32/54 */;
+  /* border: 1px solid #797979; */
+  padding-top: 1.351852rem /* 100/54 */;
   box-sizing: border-box;
+  color: #333333;
+  border-radius: 0.277778rem; /* 15/54 */
 }
 
 .btnCanel {
-  margin: 0.285185rem /* 10/54 */ auto;
+  margin: 0.685185rem /* 10/54 */ auto;
   display: block;
-  width: 1.666667rem /* 90/54 */;
-  height: 0.655556rem /* 30/54 */;
+  font-size: 0.4333rem;
+  width: 1.866667rem /* 90/54 */;
+  height: 0.805556rem /* 30/54 */;
   border-radius: 0.092593rem; /* 5/54 */
   border: none;
   background-color: #169bd5;
